[gd_scene load_steps=8 format=1]

[ext_resource path="res://Script/Main.gd" type="Script" id=1]
[ext_resource path="res://Texture/Player/Player3.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Texture/Background/Space.png" type="Texture" id=4]
[ext_resource path="res://Script/spaceBackground.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15.4664, 6.45475 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 14.3731, 2.52634 )

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="player" type="RigidBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.0387001, 0.189879 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 0.00240205
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="playerCollider" type="CollisionShape2D" parent="player"]

transform/pos = Vector2( 0.0387001, 0.189879 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="playerSprite" type="AnimatedSprite" parent="player"]

frames = ExtResource( 2 )
animation = "default"
playing = true
offset = Vector2( 0, -0.5 )

[node name="playerFront" type="Area2D" parent="player"]

transform/pos = Vector2( 22.6934, -0.01087 )
transform/scale = Vector2( 0.29083, 0.237912 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( -0.69294, 0, 0, 4.20324, -33.5045, 0.986139 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/playerFront"]

transform/pos = Vector2( -33.5045, 0.986139 )
transform/scale = Vector2( -0.69294, 4.20324 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="camera" type="Camera2D" parent="player"]

transform/pos = Vector2( 0.0387, 0 )
offset = Vector2( 50, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.25, 0.25 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 1.0
drag_margin/right = 0.2
drag_margin/bottom = 1.0

[node name="Control" parent="player" instance=ExtResource( 3 )]

process/pause_mode = 2

[node name="mapHolder" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]

z/z = -1
polygon = Vector2Array( 600, 65, -600, 65, -600, 300, 600, 300 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 4 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 2, 2 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 5 )

[node name="Polygon2D1" type="Polygon2D" parent="."]

z/z = -1
polygon = Vector2Array( 600, -65, -600, -65, -600, -300, 600, -300 )
uv = Vector2Array( 600, -65, -600, -65, -600, -300, 600, -300 )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 4 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 2, 2 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 5 )

[node name="Polygon2D2" type="Polygon2D" parent="."]

z/z = -3
polygon = Vector2Array( 600, -65, -600, -65, -600, 65, 600, 65 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 4 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 2, 2 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 5 )


[editable path="player/Control"]
